--- a/src/components/MainPage/Home.css
+++ b/src/components/MainPage/Home.css
@@ -27,27 +27,61 @@
   left: 0;
   margin: auto;
 }
-.right img{
+.right img {
   width: 80%;
-  
   margin-top: -50px;
 }
 .left {
   margin-top: -70px;
 }
-@media screen and (max-width: 390px) {
-  .right img {
-    width: 100%;
-  }
+.btn-primary-slide {
+  background: #0f3460;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 10px 25px;
+}
+/* Estilos responsive */
+@media (max-width: 768px) {
   .homeSlide h1 {
-    font-size: 25px;
-    line-height:35px;
-    margin: 0px 0 20px 0;
+    font-size: 35px;
+    line-height: 45px;
+    margin: 30px 0 15px 0;
   }
   .homeSlide p {
-    margin: 20px 0;
+    margin: 15px 0;
   }
-  
- 
+  .right img {
+    width: 100%;
+    margin-top: 0;
+  }
+  .left {
+    margin-top: 0;
+  }
+}
 
+@media (max-width: 390px) {
+  .homeSlide h1 {
+    font-size: 20px;
+    line-height: 25px;
+    margin: 0px 0 0px 0;
+  }
+  .homeSlide p {
+    margin: 10px 0;
+    font-size: 10px;
+  }
+  .right img {
+    width: 100%;
+    margin-top: 0;
+  }
+  .left {
+    margin-top: 0;
+  }
+  .btn-primary-slide {
+    
+    font-size: 10px;
+
+    padding: 5px 15px;
+    margin-bottom: 5rem;
+  }
 }
