--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
 }
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #ffffff !important; 
+  background-color: white !important; 
 }
 .background {
   background: #f6f9fc;
